<resources>
    <string name="app_name">Wateroder</string>
    <string name="balance">35.5</string>
    <string name="username">User</string>
    <string name="password">Password</string>
    <string name="login_success">Login Success!</string>
    <string name="login_fail">Login Failed!</string>
    <string name="username_empty">User Name Can\'t be Empty!</string>
    <string name="pwd_empty">Please Enter the Password</string>
    <string name="rec_empty">Please Enter Your Password Again!</string>
    <string name="aks">aks</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="phone">phone</string>
    <string name="address">address</string>
    <string name="card">bankCard</string>
    <string name="inputehint">记住我的密码</string>
    <string name="companyName">蓝    光    水    站</string>
    <string name="hint_phone">Phone</string>
    <string name="input_address">Address</string>
    <string name="settlement">结算</string>
    <string name="ZeroYuan">0</string>
    <string name="shoppingCart">购物车：</string>
    <string name="addCart">加入购物车</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="supplier">Supplier</string>
    <string name="surplus">Surplus</string>
    <string name="goodParam">产品参数</string>
    <string name="Cancel">取消</string>
    <string name="Account">用户名</string>
    <string name="orderstatus">派送状态</string>
    <string name="stattime">订单时间</string>
    <string name="orderid">订单号</string>
    <string name="emptybarket">空桶</string>
    <string name="owebarrel">欠桶</string>
    <string name="user">用户</string>
    <string name="uname">Username</string>
    <string name="dormitory">Dormitory</string>
    <string name="ipaddress">IP Address</string>
    <string name="sure">确认订单</string>
    <string name="entershapcar">进入购物车</string>
    <string name="yinfujine">应付金额</string>
    <string name="renmingbidanwei">¥：</string>
    <string name="total">共计0件商品</string>
    <string name="xiaoji">小计：¥0.00</string>
    <string name="jiahao">+</string>
    <string name="jianhao">-</string>
    <string name="zero">0</string>
    <string name="zerooo">0</string>
    <string name="yiii">一</string>
    <string name="zeroi">0</string>
    <string name="zer">0</string>
</resources>
